Fixed text-overflow in two places

--- a/app/javascript/stylesheets/partials/_comment.scss
+++ b/app/javascript/stylesheets/partials/_comment.scss
@@ -9,6 +9,7 @@
 
 .comment {
   border-top: 1px solid gray;
+  word-wrap: break-word;
 
   .comment {
     margin-left: 30px;
