--- a/app/javascript/stylesheets/partials/_list.scss
+++ b/app/javascript/stylesheets/partials/_list.scss
@@ -1,7 +1,7 @@
 .new-list {
   color: $gray;
   text-align: center;
-  height: 180px;
+  //height: 180px;
   padding: 15px;
   display: block;
   opacity: 0.6;
